4 Rendu 21112019 /4-4-ft_itoa.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
su-j1.21-school.ru
Darwin 16.7.0 x86_64
$> date
Thu Nov 21 15:42:23 MSK 2019
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 9.0.0 (clang-900.0.39.2)
Target: x86_64-apple-darwin16.7.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2019/c-exam-alone-in-the-dark-beginner/exam_20191121/apearl

= Git history ==================================================================
$> git -C /var/folders/88/64jtmn2n67q6d14s7466863m0000gq/T/tmpTVsODu/user log --pretty='%H - %an, %ad : %s'
be5a4bddecf26547719a9b85d48ad42a5c150898 - Exam 42, Thu Nov 21 15:42:14 2019 +0300 : ft_itoa
873fe792ca971277a1fdf965e241b77511f9c2b6 - Exam 42, Thu Nov 21 15:01:21 2019 +0300 : str_capitalizer
1654b5afc4748874332fdb8500315f16b717cc92 - Exam 42, Thu Nov 21 13:58:50 2019 +0300 : hidenp
 
= Collected files ==========================================
$> ls -lAR /var/folders/88/64jtmn2n67q6d14s7466863m0000gq/T/tmpTVsODu/user
total 8
-rw-r--r--  1 deepthought  deepthought  750 Nov 21 15:42 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Nov 21 15:42 ft_itoa
drwxr-xr-x  3 deepthought  deepthought  102 Nov 21 15:42 hidenp
drwxr-xr-x  3 deepthought  deepthought  102 Nov 21 15:42 str_capitalizer

/var/folders/88/64jtmn2n67q6d14s7466863m0000gq/T/tmpTVsODu/user/ft_itoa:
total 8
-rw-r--r--  1 deepthought  deepthought  745 Nov 21 15:42 ft_itoa.c

/var/folders/88/64jtmn2n67q6d14s7466863m0000gq/T/tmpTVsODu/user/hidenp:
total 8
-rw-r--r--  1 deepthought  deepthought  706 Nov 21 15:42 hidenp.c

/var/folders/88/64jtmn2n67q6d14s7466863m0000gq/T/tmpTVsODu/user/str_capitalizer:
total 8
-rw-r--r--  1 deepthought  deepthought  770 Nov 21 15:42 str_capitalizer.c
 
= ft_itoa ======================================================================
$> gcc -Wextra -Wall -Werror main.c ft_itoa.c -o user_exe 
ft_itoa.c:26:28: error: variable 'n' is uninitialized when used here [-Werror,-Wuninitialized]
    n = (nbr < 0) ? -(long)n : n;
                           ^
ft_itoa.c:18:11: note: initialize the variable 'n' to silence this warning
    long n;
          ^
           = 0
ft_itoa.c:24:23: error: variable 'len' is uninitialized when used here [-Werror,-Wuninitialized]
    len = nbrlen(nbr, len);
                      ^~~
ft_itoa.c:19:12: note: initialize the variable 'len' to silence this warning
    int len;
           ^
            = 0
2 errors generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
